# ernie-image-mlx

./: .gitignore  README.md  generate.py  pyproject.toml
ernie_mlx/: __init__.py  config.py  generate.py  pipeline.py  research_log.md  scheduler.py  tokenizer.py
ernie_mlx/model/: __init__.py  attention.py  dit_block.py  embeddings.py  feed_forward.py  transformer.py
ernie_mlx/text_encoder/: __init__.py  mistral.py
ernie_mlx/vae/: __init__.py  decoder.py
ernie_mlx/weights/: loader.py
